versions/0.8.0/_sources/refs/_aws-cdk_aws-kinesisanalytics.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"tVyGpEwW1Gk3LTJiPusnsjUa3LqX6ruFaxa1/vJH3j4="}

@aws-cdk/aws-kinesisanalytics
=============================

.. mdinclude:: ./__aws-cdk_aws-kinesisanalytics.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-kinesisanalytics


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-kinesisanalytics.cloudformation

ApplicationOutputResource
~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationOutputResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApplicationOutputResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApplicationOutputResource``
   :type properties: :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationOutputResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: DestinationSchemaProperty



      .. py:attribute:: recordFormatType

         ``ApplicationOutputResource.DestinationSchemaProperty.RecordFormatType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-destinationschema.html#cfn-kinesisanalytics-applicationoutput-destinationschema-recordformattype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: KinesisFirehoseOutputProperty



      .. py:attribute:: resourceArn

         ``ApplicationOutputResource.KinesisFirehoseOutputProperty.ResourceARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-kinesisfirehoseoutput.html#cfn-kinesisanalytics-applicationoutput-kinesisfirehoseoutput-resourcearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``ApplicationOutputResource.KinesisFirehoseOutputProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-kinesisfirehoseoutput.html#cfn-kinesisanalytics-applicationoutput-kinesisfirehoseoutput-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: KinesisStreamsOutputProperty



      .. py:attribute:: resourceArn

         ``ApplicationOutputResource.KinesisStreamsOutputProperty.ResourceARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-kinesisstreamsoutput.html#cfn-kinesisanalytics-applicationoutput-kinesisstreamsoutput-resourcearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``ApplicationOutputResource.KinesisStreamsOutputProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-kinesisstreamsoutput.html#cfn-kinesisanalytics-applicationoutput-kinesisstreamsoutput-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: LambdaOutputProperty



      .. py:attribute:: resourceArn

         ``ApplicationOutputResource.LambdaOutputProperty.ResourceARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-lambdaoutput.html#cfn-kinesisanalytics-applicationoutput-lambdaoutput-resourcearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``ApplicationOutputResource.LambdaOutputProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-lambdaoutput.html#cfn-kinesisanalytics-applicationoutput-lambdaoutput-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: OutputProperty



      .. py:attribute:: destinationSchema

         ``ApplicationOutputResource.OutputProperty.DestinationSchema``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-output.html#cfn-kinesisanalytics-applicationoutput-output-destinationschema


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationOutputResource.DestinationSchemaProperty`


      .. py:attribute:: kinesisFirehoseOutput

         ``ApplicationOutputResource.OutputProperty.KinesisFirehoseOutput``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-output.html#cfn-kinesisanalytics-applicationoutput-output-kinesisfirehoseoutput


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationOutputResource.KinesisFirehoseOutputProperty` or undefined


      .. py:attribute:: kinesisStreamsOutput

         ``ApplicationOutputResource.OutputProperty.KinesisStreamsOutput``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-output.html#cfn-kinesisanalytics-applicationoutput-output-kinesisstreamsoutput


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationOutputResource.KinesisStreamsOutputProperty` or undefined


      .. py:attribute:: lambdaOutput

         ``ApplicationOutputResource.OutputProperty.LambdaOutput``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-output.html#cfn-kinesisanalytics-applicationoutput-output-lambdaoutput


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationOutputResource.LambdaOutputProperty` or undefined


      .. py:attribute:: name

         ``ApplicationOutputResource.OutputProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationoutput-output.html#cfn-kinesisanalytics-applicationoutput-output-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



ApplicationOutputResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationOutputResourceProps



   .. py:attribute:: applicationName

      ``AWS::KinesisAnalytics::ApplicationOutput.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-applicationoutput.html#cfn-kinesisanalytics-applicationoutput-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: output

      ``AWS::KinesisAnalytics::ApplicationOutput.Output``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-applicationoutput.html#cfn-kinesisanalytics-applicationoutput-output


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationOutputResource.OutputProperty`


ApplicationReferenceDataSourceResource
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationReferenceDataSourceResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApplicationReferenceDataSourceResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApplicationReferenceDataSourceResource``
   :type properties: :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: CSVMappingParametersProperty



      .. py:attribute:: recordColumnDelimiter

         ``ApplicationReferenceDataSourceResource.CSVMappingParametersProperty.RecordColumnDelimiter``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-csvmappingparameters.html#cfn-kinesisanalytics-applicationreferencedatasource-csvmappingparameters-recordcolumndelimiter


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: recordRowDelimiter

         ``ApplicationReferenceDataSourceResource.CSVMappingParametersProperty.RecordRowDelimiter``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-csvmappingparameters.html#cfn-kinesisanalytics-applicationreferencedatasource-csvmappingparameters-recordrowdelimiter


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: JSONMappingParametersProperty



      .. py:attribute:: recordRowPath

         ``ApplicationReferenceDataSourceResource.JSONMappingParametersProperty.RecordRowPath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-jsonmappingparameters.html#cfn-kinesisanalytics-applicationreferencedatasource-jsonmappingparameters-recordrowpath


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: MappingParametersProperty



      .. py:attribute:: csvMappingParameters

         ``ApplicationReferenceDataSourceResource.MappingParametersProperty.CSVMappingParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-mappingparameters.html#cfn-kinesisanalytics-applicationreferencedatasource-mappingparameters-csvmappingparameters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.CSVMappingParametersProperty` or undefined


      .. py:attribute:: jsonMappingParameters

         ``ApplicationReferenceDataSourceResource.MappingParametersProperty.JSONMappingParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-mappingparameters.html#cfn-kinesisanalytics-applicationreferencedatasource-mappingparameters-jsonmappingparameters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.JSONMappingParametersProperty` or undefined


   .. py:class:: RecordColumnProperty



      .. py:attribute:: mapping

         ``ApplicationReferenceDataSourceResource.RecordColumnProperty.Mapping``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-recordcolumn.html#cfn-kinesisanalytics-applicationreferencedatasource-recordcolumn-mapping


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: name

         ``ApplicationReferenceDataSourceResource.RecordColumnProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-recordcolumn.html#cfn-kinesisanalytics-applicationreferencedatasource-recordcolumn-name


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: sqlType

         ``ApplicationReferenceDataSourceResource.RecordColumnProperty.SqlType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-recordcolumn.html#cfn-kinesisanalytics-applicationreferencedatasource-recordcolumn-sqltype


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: RecordFormatProperty



      .. py:attribute:: mappingParameters

         ``ApplicationReferenceDataSourceResource.RecordFormatProperty.MappingParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-recordformat.html#cfn-kinesisanalytics-applicationreferencedatasource-recordformat-mappingparameters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.MappingParametersProperty` or undefined


      .. py:attribute:: recordFormatType

         ``ApplicationReferenceDataSourceResource.RecordFormatProperty.RecordFormatType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-recordformat.html#cfn-kinesisanalytics-applicationreferencedatasource-recordformat-recordformattype


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: ReferenceDataSourceProperty



      .. py:attribute:: referenceSchema

         ``ApplicationReferenceDataSourceResource.ReferenceDataSourceProperty.ReferenceSchema``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-referencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-referencedatasource-referenceschema


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.ReferenceSchemaProperty`


      .. py:attribute:: s3ReferenceDataSource

         ``ApplicationReferenceDataSourceResource.ReferenceDataSourceProperty.S3ReferenceDataSource``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-referencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-referencedatasource-s3referencedatasource


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.S3ReferenceDataSourceProperty` or undefined


      .. py:attribute:: tableName

         ``ApplicationReferenceDataSourceResource.ReferenceDataSourceProperty.TableName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-referencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-referencedatasource-tablename


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ReferenceSchemaProperty



      .. py:attribute:: recordColumns

         ``ApplicationReferenceDataSourceResource.ReferenceSchemaProperty.RecordColumns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-referenceschema.html#cfn-kinesisanalytics-applicationreferencedatasource-referenceschema-recordcolumns


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.RecordColumnProperty`


      .. py:attribute:: recordEncoding

         ``ApplicationReferenceDataSourceResource.ReferenceSchemaProperty.RecordEncoding``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-referenceschema.html#cfn-kinesisanalytics-applicationreferencedatasource-referenceschema-recordencoding


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: recordFormat

         ``ApplicationReferenceDataSourceResource.ReferenceSchemaProperty.RecordFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-referenceschema.html#cfn-kinesisanalytics-applicationreferencedatasource-referenceschema-recordformat


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.RecordFormatProperty`


   .. py:class:: S3ReferenceDataSourceProperty



      .. py:attribute:: bucketArn

         ``ApplicationReferenceDataSourceResource.S3ReferenceDataSourceProperty.BucketARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-s3referencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-s3referencedatasource-bucketarn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: fileKey

         ``ApplicationReferenceDataSourceResource.S3ReferenceDataSourceProperty.FileKey``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-s3referencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-s3referencedatasource-filekey


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: referenceRoleArn

         ``ApplicationReferenceDataSourceResource.S3ReferenceDataSourceProperty.ReferenceRoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-applicationreferencedatasource-s3referencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-s3referencedatasource-referencerolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`



ApplicationReferenceDataSourceResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationReferenceDataSourceResourceProps



   .. py:attribute:: applicationName

      ``AWS::KinesisAnalytics::ApplicationReferenceDataSource.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-applicationreferencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: referenceDataSource

      ``AWS::KinesisAnalytics::ApplicationReferenceDataSource.ReferenceDataSource``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-applicationreferencedatasource.html#cfn-kinesisanalytics-applicationreferencedatasource-referencedatasource


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationReferenceDataSourceResource.ReferenceDataSourceProperty`


ApplicationResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ApplicationResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ApplicationResource``
   :type properties: :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: CSVMappingParametersProperty



      .. py:attribute:: recordColumnDelimiter

         ``ApplicationResource.CSVMappingParametersProperty.RecordColumnDelimiter``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-csvmappingparameters.html#cfn-kinesisanalytics-application-csvmappingparameters-recordcolumndelimiter


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: recordRowDelimiter

         ``ApplicationResource.CSVMappingParametersProperty.RecordRowDelimiter``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-csvmappingparameters.html#cfn-kinesisanalytics-application-csvmappingparameters-recordrowdelimiter


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: InputLambdaProcessorProperty



      .. py:attribute:: resourceArn

         ``ApplicationResource.InputLambdaProcessorProperty.ResourceARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputlambdaprocessor.html#cfn-kinesisanalytics-application-inputlambdaprocessor-resourcearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``ApplicationResource.InputLambdaProcessorProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputlambdaprocessor.html#cfn-kinesisanalytics-application-inputlambdaprocessor-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: InputParallelismProperty



      .. py:attribute:: count

         ``ApplicationResource.InputParallelismProperty.Count``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputparallelism.html#cfn-kinesisanalytics-application-inputparallelism-count


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: InputProcessingConfigurationProperty



      .. py:attribute:: inputLambdaProcessor

         ``ApplicationResource.InputProcessingConfigurationProperty.InputLambdaProcessor``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputprocessingconfiguration.html#cfn-kinesisanalytics-application-inputprocessingconfiguration-inputlambdaprocessor


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.InputLambdaProcessorProperty` or undefined


   .. py:class:: InputProperty



      .. py:attribute:: inputParallelism

         ``ApplicationResource.InputProperty.InputParallelism``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-input.html#cfn-kinesisanalytics-application-input-inputparallelism


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.InputParallelismProperty` or undefined


      .. py:attribute:: inputProcessingConfiguration

         ``ApplicationResource.InputProperty.InputProcessingConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-input.html#cfn-kinesisanalytics-application-input-inputprocessingconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.InputProcessingConfigurationProperty` or undefined


      .. py:attribute:: inputSchema

         ``ApplicationResource.InputProperty.InputSchema``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-input.html#cfn-kinesisanalytics-application-input-inputschema


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.InputSchemaProperty`


      .. py:attribute:: kinesisFirehoseInput

         ``ApplicationResource.InputProperty.KinesisFirehoseInput``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-input.html#cfn-kinesisanalytics-application-input-kinesisfirehoseinput


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.KinesisFirehoseInputProperty` or undefined


      .. py:attribute:: kinesisStreamsInput

         ``ApplicationResource.InputProperty.KinesisStreamsInput``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-input.html#cfn-kinesisanalytics-application-input-kinesisstreamsinput


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.KinesisStreamsInputProperty` or undefined


      .. py:attribute:: namePrefix

         ``ApplicationResource.InputProperty.NamePrefix``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-input.html#cfn-kinesisanalytics-application-input-nameprefix


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: InputSchemaProperty



      .. py:attribute:: recordColumns

         ``ApplicationResource.InputSchemaProperty.RecordColumns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputschema.html#cfn-kinesisanalytics-application-inputschema-recordcolumns


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.RecordColumnProperty`


      .. py:attribute:: recordEncoding

         ``ApplicationResource.InputSchemaProperty.RecordEncoding``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputschema.html#cfn-kinesisanalytics-application-inputschema-recordencoding


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: recordFormat

         ``ApplicationResource.InputSchemaProperty.RecordFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-inputschema.html#cfn-kinesisanalytics-application-inputschema-recordformat


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.RecordFormatProperty`


   .. py:class:: JSONMappingParametersProperty



      .. py:attribute:: recordRowPath

         ``ApplicationResource.JSONMappingParametersProperty.RecordRowPath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-jsonmappingparameters.html#cfn-kinesisanalytics-application-jsonmappingparameters-recordrowpath


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: KinesisFirehoseInputProperty



      .. py:attribute:: resourceArn

         ``ApplicationResource.KinesisFirehoseInputProperty.ResourceARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-kinesisfirehoseinput.html#cfn-kinesisanalytics-application-kinesisfirehoseinput-resourcearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``ApplicationResource.KinesisFirehoseInputProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-kinesisfirehoseinput.html#cfn-kinesisanalytics-application-kinesisfirehoseinput-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: KinesisStreamsInputProperty



      .. py:attribute:: resourceArn

         ``ApplicationResource.KinesisStreamsInputProperty.ResourceARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-kinesisstreamsinput.html#cfn-kinesisanalytics-application-kinesisstreamsinput-resourcearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: roleArn

         ``ApplicationResource.KinesisStreamsInputProperty.RoleARN``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-kinesisstreamsinput.html#cfn-kinesisanalytics-application-kinesisstreamsinput-rolearn


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: MappingParametersProperty



      .. py:attribute:: csvMappingParameters

         ``ApplicationResource.MappingParametersProperty.CSVMappingParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-mappingparameters.html#cfn-kinesisanalytics-application-mappingparameters-csvmappingparameters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.CSVMappingParametersProperty` or undefined


      .. py:attribute:: jsonMappingParameters

         ``ApplicationResource.MappingParametersProperty.JSONMappingParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-mappingparameters.html#cfn-kinesisanalytics-application-mappingparameters-jsonmappingparameters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.JSONMappingParametersProperty` or undefined


   .. py:class:: RecordColumnProperty



      .. py:attribute:: mapping

         ``ApplicationResource.RecordColumnProperty.Mapping``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-recordcolumn.html#cfn-kinesisanalytics-application-recordcolumn-mapping


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: name

         ``ApplicationResource.RecordColumnProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-recordcolumn.html#cfn-kinesisanalytics-application-recordcolumn-name


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: sqlType

         ``ApplicationResource.RecordColumnProperty.SqlType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-recordcolumn.html#cfn-kinesisanalytics-application-recordcolumn-sqltype


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: RecordFormatProperty



      .. py:attribute:: mappingParameters

         ``ApplicationResource.RecordFormatProperty.MappingParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-recordformat.html#cfn-kinesisanalytics-application-recordformat-mappingparameters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.MappingParametersProperty` or undefined


      .. py:attribute:: recordFormatType

         ``ApplicationResource.RecordFormatProperty.RecordFormatType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-kinesisanalytics-application-recordformat.html#cfn-kinesisanalytics-application-recordformat-recordformattype


         :type: string or :py:class:`@aws-cdk/cdk.Token`



ApplicationResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ApplicationResourceProps



   .. py:attribute:: inputs

      ``AWS::KinesisAnalytics::Application.Inputs``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-application.html#cfn-kinesisanalytics-application-inputs


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-kinesisanalytics.cloudformation.ApplicationResource.InputProperty` or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: applicationCode

      ``AWS::KinesisAnalytics::Application.ApplicationCode``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-application.html#cfn-kinesisanalytics-application-applicationcode


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: applicationDescription

      ``AWS::KinesisAnalytics::Application.ApplicationDescription``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-application.html#cfn-kinesisanalytics-application-applicationdescription


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: applicationName

      ``AWS::KinesisAnalytics::Application.ApplicationName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-kinesisanalytics-application.html#cfn-kinesisanalytics-application-applicationname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-kinesisanalytics

